--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vite": "^7.1.7"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.52.5"
+    "@rollup/rollup-linux-x64-gnu": "^4.52.5",
+    "@swc/core-linux-x64-gnu": "^1.13.21"
   }
 }
